namespace Verwaltungssystem;

public enum Tag
{
    Analyse
   
}